--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,21 @@
-<app-header></app-header>
+<app-header (featuredSelected)="onNavigate($event)"></app-header>
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <app-recipes></app-recipes>
-            <app-shopping-list></app-shopping-list>
+            <app-recipes *ngIf="loadedFeature==='recipe'"></app-recipes>
+            <app-shopping-list *ngIf="loadedFeature!=='recipe'"></app-shopping-list>
         </div>
     </div>
 </div>
+
+<!-- <div class="row">
+    <div class="col-xs-12">
+        <app-game-control (intervalFired)="intervalFired($event)"></app-game-control>
+    </div>
+</div>
+<div class="row">
+    <div class="col-xs-12">
+        <app-odd *ngFor="let od of oddNumbers" [numero]="od"></app-odd>
+        <app-even *ngFor="let ev of evenNumbers" [number]="ev"></app-even>
+    </div>
+</div> -->
