--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,10 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Recipes</a>
+                    <a class="nav-link active" href="#"  (click)="onSelected('recipe')">Recipes</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Shopping List</a>
+                    <a class="nav-link" href="#" (click)="onSelected('shopping-list')">Shopping List</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
