--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,21 +6,8 @@
 <hr/>
 <div class="row">
     <div class="col-xs-12">
-        <a href="#" class="list-group-item clearfix" *ngFor="let r of recipes">
-            <div class="float-start">
-                <h4 class="list-group-item-heading">
-                    {{r.name}}
-                </h4>
-                <p class="list-group-item-text">{{r.description}}</p>
-            </div>
-            <span class="float-end">
-                <img 
-                [src]="r.imagePath"
-                style="max-height: 50px;" 
-                alt="{{r.name}}" 
-                class="img-responsive">
-            </span>
-        </a>
-        <app-recipe-item></app-recipe-item>
+        <app-recipe-item *ngFor="let r of recipes" 
+        [recipe]="r"
+        (recipeSelected)="onRecipeSelected(r)"></app-recipe-item>
     </div>
 </div>
