--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,22 +1,28 @@
 <div class="row">
     <div class="col-xs-12">
-        <form action="">
+        <form>
             <div class="row">
                 <div class="col-sm-5 from-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" class="form-control">
+                    <input type="text" 
+                    id="name"
+                    #nameInput 
+                    class="form-control">
                 </div>
                 <div class="col-sm-2 from-group">
                     <label for="amount">Amount</label>
-                    <input type="number" id="amount" class="form-control">
+                    <input type="number" 
+                    id="amount" 
+                    class="form-control"
+                    #amountInput>
                 </div>
             </div>
             <br>
             <div class="row">
                 <div class="col-xs-12">
-                    <button type="submit" class="btn btn-success">Add</button>
-                    <button type="button" class="btn btn-danger">Delete</button>
-                    <button type="button" class="btn btn-primary">Clear</button>
+                    <button type="button" class="btn btn-success  m-1" (click)="onAddItem()">Add</button>
+                    <button type="button" class="btn btn-danger m-1">Delete</button>
+                    <button type="button" class="btn btn-primary m-1">Clear</button>
                 </div>
             </div>
         </form>
